# cc-template

./: .bazeliskrc  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  requirements.txt  requirements_lock.txt  run  tasks.yaml
.github/workflows/: run-tasks.yaml
cc/: BUILD.bazel  pub.c  pub.cpp  sub.c  sub.cpp
cc/idl/: HelloWorldData.c  HelloWorldData.cpp  HelloWorldData.h  HelloWorldData.hpp
cc/test/integration/: test_c_pub_sub.py  test_cpp_pub_sub.py
external_bazel_templates/: BUILD.bazel.cyclonedds  BUILD.bazel.cyclonedds-cxx
pkg/: BUILD.bazel  pkg_vars.bzl  toolchain.bzl  version.bzl
pkg/pkg-files/: deps.bash
python/: BUILD.bazel  add_two_ints.py  pub.py  sub.py
python/test/: test_add_two_ints.py
python/test/integration/: __init__.py  test_pub_sub.py
src/: BUILD.bazel  hello.hpp  main.cpp
