workspace(name = "bazel-playground")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

## Python Environment
# import rules_python
http_archive(
    name = "rules_python",
    sha256 = "9d04041ac92a0985e344235f5d946f71ac543f1b1565f2cdbc9a2aaee8adf55b",
    strip_prefix = "rules_python-0.26.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.26.0/rules_python-0.26.0.tar.gz",
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

# Set up python toolchian, specify python version to use
python_register_toolchains(
    name = "python_3_10",
    python_version = "3.10",
    register_coverage_tool = True, # for `bazel coverage` command for python codes
)

load("@python_3_10//:defs.bzl", _python_interpreter = "interpreter")
load("@rules_python//python:pip.bzl", "pip_parse")

# Install python pkgs through pip
pip_parse(
    name = "python_deps",
    python_interpreter_target = _python_interpreter,
    requirements_lock = "//:requirements_lock.txt",
)

load("@python_deps//:requirements.bzl", "install_deps")

install_deps()


## Rules foreign cc
http_archive(
    name = "rules_foreign_cc",
    sha256 = "6041f1374ff32ba711564374ad8e007aef77f71561a7ce784123b9b4b88614fc",
    strip_prefix = "rules_foreign_cc-0.8.0",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/0.8.0.tar.gz",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

## CycloneDDS
http_archive(
    name = "cyclonedds",
    sha256 = "495ace40b51025d1465bd10a8c6c0f36a1a3a03a97f8e6d4582a06086644c3b8",
    strip_prefix = "cyclonedds-0.11.0",
    build_file = "//external_bazel_templates:BUILD.bazel.cyclonedds",
    url = "https://github.com/allenwang-git/cyclonedds/archive/refs/tags/0.11.0.tar.gz",
)

http_archive(
    name = "cyclonedds-cxx",
    sha256 = "336319064796e73dd0b3d366fc6dea0d796ddba946506b22a8ca488a2100859f",
    strip_prefix = "cyclonedds-cxx-0.11.0.1",
    build_file = "//external_bazel_templates:BUILD.bazel.cyclonedds-cxx",
    url = "https://github.com/allenwang-git/cyclonedds-cxx/archive/refs/tags/0.11.0.1.tar.gz",
)


## rules_pkg
http_archive(
    name = "rules_pkg",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_pkg/releases/download/0.9.0/rules_pkg-0.9.0.tar.gz",
        "https://github.com/bazelbuild/rules_pkg/releases/download/0.9.0/rules_pkg-0.9.0.tar.gz",
    ],
    sha256 = "335632735e625d408870ec3e361e192e99ef7462315caa887417f4d88c4c8fb8",
)

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()
